--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
     <footer class="footer">
         <div class="footer__container">
-            <img class="footer__logo" src="./dist/images/disneyplus.svg" alt="Disney+">
+            <img class="footer__logo" src="./dist/images/marvel.svg" alt="Disney+">
             <ul class="footer__links">
                 <li class="footer__links__item">
                     <div class="language-selector">
@@ -209,23 +209,12 @@
                         Ajuda
                     </a>
                 </li>
-                <li class="footer__links__item">
-                    <a href="#" class="text--small">
-                        Sobre o Disney+
-                    </a>
                 </li>
-
             </ul>
             <p class="text--small">
-                ® 2022 Disney+ e the Walt Disney Company. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.
-            </p>
-            <p class="text--small">Disney+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Disney+ é comercializado por The Walt Disney Company (Brasil) Ltda., World Trade Center, Av. Das Nações Unidas, 12.551, 12.555, 12.559, Piso 10, São Paulo/SP - CEP 04578-903, Brasil e CNPJ/M 73.042.962/0004-20.
+                ® 2025 MarvelBrasil, Disney+ e The Walt Disney Company. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.
             </p>        
-        </div>
-
-
-
-        
+        </div>        
     </footer>
     <script src="./dist/js/main.js"></script>
 </body>
